src/test/resources/purescript_examples/manual/failing/ArgLengthMismatch.purs.psi
FILE
  PureASTWrapperElement(Program)
    PureASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PureASTWrapperElement(ModuleName)
        PureASTWrapperElement(Qualified)
          PsiElement(proper name)('ArgLengthMismatch')
          PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n  ')
      PureASTWrapperElement(ValueDeclaration)
        PsiElement(identifier)('f')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Binder)
          PureASTWrapperElement(VarBinder)
            PsiElement(identifier)('x')
            PsiElement(whitespace)(' ')
        PureASTWrapperElement(Binder)
          PureASTWrapperElement(VarBinder)
            PsiElement(identifier)('y')
            PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Value)
          PureASTWrapperElement(PrefixValue)
            PureASTWrapperElement(BooleanLiteral)
              PsiElement(true)('true')
              PsiElement(whitespace)('\n  ')
      PureASTWrapperElement(ValueDeclaration)
        PsiElement(identifier)('f')
        PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Value)
          PureASTWrapperElement(PrefixValue)
            PureASTWrapperElement(BooleanLiteral)
              PsiElement(false)('false')
